fixed event message box so that it properly displays the last event fixed an issue with HD sized screens with CSS
---AI---
added moods that control what the AI favors
*killing and looting are the only two moods as of now
*mood is set on init and can be changed if the AI has taken too much damage
tried to control battles and force them to stand apart from each other rather than right ontop of each other
added item distance check
gave AI names from a table defined in config
gave AI colors from a table defined in config

--Config--
adjusted the amount of asteroids spawning
tried to adjust loot tables
reduced #of planets
reduced #of nebulas
increased cooldown of base gun

---Game---
changed AI spawn so that if the game starts and maxplayers isnt reached, it is filled in with AI
fixed game win conditions to be appropriate with AI
fixed an exploit (the AI found it.... ) that the cooldown of the guns would be forever upgraded if you kept picking them up

--- a/client/styles.css
+++ b/client/styles.css
@@ -364,6 +364,15 @@ input {
 	}
 }
 
+@media screen and (max-width: 1300px){
+	#main {
+		margin-top: -15%;
+	}
+	#playerProfile{
+		margin-top: -10%;
+	}
+}
+
 @media screen and (max-width: 991px) and (orientation:landscape) {
 	#bannerBox h1{
 		font-size: 40px;
